# temporality_in_clinical_notes

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
temporal_notes/: ai_generation.py  concatenate_markdown.py  edsnlp_stuff.py  graph_comparaison.py  graph_visualization.py  ner.py  plot_error_code_hist.py  test.py
