[tool.poetry]
name = "temporal-clinical-notes"
version = "0.1.0"
description = "A project to evaluate temporality on clinical notes"
authors = ["HermesNdjeng <yanndjeng@yahoo.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
