[tool.poetry]
name = "temporal-clinical-notes"
version = "0.1.0"
description = "A project to evaluate temporality on clinical notes"
authors = ["HermesNdjeng <yanndjeng@yahoo.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
edsnlp = "^0.17.2"
networkx = "^3.5"
pyvis = "^0.3.2"
openai = "^1.102.0"
matplotlib = "^3.10.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = "^0.1.9"
pyright = "^1.1.338"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"

# Enable rule sets including import sorting
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
]

ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
    "S101",  # use of assert (common in tests)
]

exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
    ".venv",
    ".env",
    "data",
    ".ipynb_checkpoints",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Configure import sorting (replaces isort configuration)
[tool.ruff.isort]
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2
known-first-party = ["src", "temporal_notes"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# Pyright configuration
[tool.pyright]
pythonVersion = "3.11"
include = ["temporal_notes"]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
    ".venv",
    "data",
    "tests",
    "notebooks",
    ".ipynb_checkpoints"
]

# Type checking strictness
typeCheckingMode = "strict"
